--- a/examples/index.html
+++ b/examples/index.html
@@ -12,9 +12,27 @@
 </head>
 <body>
 <div class="container">
-    <p><a href="/examples/remote-modal.html" data-bs-toggle="remote-modal" class="btn btn-primary">open remote modal</a></p>
-    <p><a href="/examples/offcanvas.html" data-bs-toggle="remote-modal" class="btn btn-primary">open offcanvas</a></p>
-    <p><a href="/examples/not-found.php" data-bs-toggle="remote-modal" class="btn btn-primary">open remote modal with 404 not found</a></p>
+    <p>
+        <a href="/examples/remote-modal.html" data-bs-toggle="remote-modal" class="btn btn-primary">
+            open remote modal
+        </a>
+    </p>
+    <p>
+        <a href="/examples/offcanvas.html" data-bs-toggle="remote-modal" class="btn btn-primary">
+            open offcanvas
+        </a>
+    </p>
+    <p>
+        <a href="/examples/not-found.php" data-bs-toggle="remote-modal" class="btn btn-primary">
+            open remote modal with 404 not found
+        </a>
+    </p>
 </div>
+<script>
+    document.addEventListener('bsRemoteModalLoaded', function (event) {
+        console.log(event)
+        console.log('bsRemoteModalLoaded')
+    })
+</script>
 </body>
 </html>
